<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WifiConnection">

    <TextView
        android:id="@+id/wifiConnectionLabel"
        android:layout_width="298dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="500dp"
        android:fontFamily="@font/black_ops_one"
        android:gravity="center"
        android:text="@string/connect_to_device"
        android:textColor="#FDF50505"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="358dp"
        android:layout_height="233dp"
        android:layout_marginTop="230dp"
        android:layout_marginBottom="171dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/SSIDLabel"
            android:layout_width="67dp"
            android:layout_height="19dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="120dp"
            android:text="@string/ssid_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/SSIDField"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="79dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="105dp"
            android:text="@string/password_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/passwordField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SSIDLabel"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="94dp"
            android:layout_height="38dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="30dp"
            android:onClick="connectAndGoToMainMenu"
            android:text="@string/connect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/SSIDField"
            android:layout_width="223dp"
            android:layout_height="40dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="148dp"
            android:ems="10"
            android:hint="@string/ssid"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="223dp"
            android:layout_height="38dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="96dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SSIDField" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>