<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualControl">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.longdo.mjpegviewer.MjpegView
            android:id="@+id/mjpegview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <Button
            android:id="@+id/leftButton"
            android:layout_width="80dp"
            android:layout_height="51dp"
            android:layout_marginStart="57dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="223dp"
            android:layout_marginBottom="99dp"
            android:backgroundTint="#000000"
            android:onClick="leftButtonOnClick"
            android:text="@string/buttonleft"
            android:textColor="#FAFAFA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rightButton"
            android:layout_width="80dp"
            android:layout_height="51dp"
            android:layout_marginStart="217dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="99dp"
            android:backgroundTint="#000000"
            android:onClick="rightButtonOnClick"
            android:text="@string/buttonright"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/upButton"
            android:layout_width="80dp"
            android:layout_height="51dp"
            android:layout_marginStart="137dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="143dp"
            android:layout_marginBottom="150dp"
            android:backgroundTint="#000000"
            android:onClick="upButtonOnClick"
            android:text="@string/buttonup"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/downButton"
            android:layout_width="80dp"
            android:layout_height="51dp"
            android:layout_marginStart="137dp"
            android:layout_marginTop="126dp"
            android:layout_marginEnd="143dp"
            android:layout_marginBottom="48dp"
            android:backgroundTint="#000000"
            android:onClick="downButtonOnClick"
            android:text="@string/buttondown"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/videoSwitch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="270dp"
            android:layout_marginTop="190dp"
            android:onClick="enableVideo"
            android:text="@string/enable_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="300dp"
        android:onClick="stopButtonOnClick"
        android:text="@string/stop"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>